INCLUDE_DIRECTORIES(
${RL_COMMON_INCLUDE_DIR}
${RL_CORE_INCLUDE_DIR}
${RL_RULES_INCLUDE_DIR}
${RL_AI_INCLUDE_DIR}
${RL_UI_INCLUDE_DIR}
${RL_SCRIPT_INCLUDE_DIR}
${TINYXML2_INCLUDE_DIR}
${OGRE_INCLUDE_DIRS}
${CEGUI_INCLUDE_DIRS}
${OGRENEWT_INCLUDE_DIR}
${OIS_INCLUDE_DIRS})

SET(Rastullah_APP_SRCS
src/RastullahMain.cpp)

ADD_EXECUTABLE(rastullah ${Rastullah_APP_SRCS})

TARGET_LINK_LIBRARIES(rastullah RlCommon RlCore RlRules RlAi RlUi RlScript ${TINYXML2_LIBRARY})

INSTALL(TARGETS rastullah RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${BINDIR})
